🐛 Fix possible `ConcurrentModificationException` #97
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>